# sergiy-mil

./: README.md  analysis.ipynb  pyproject.toml
docs/: milp.md  scheduling_problem.md
src/: heuristic.py  lp.py  main.py  milp.py  problem.py  scheduling_problem.py  tableau.py  tabular_lp.py
src/lp/: lp.py
src/milp/: branchbound.py  heuristic.py  lp_api.py  milp.py
tests/: factories.py  or_tools_api.py  problem_api.py  problem_gen.py  tabular_test.py  test_milp.py  test_scheduling.py  value_gen.py
tests/factory_diagrams/: ArticleExample1.dot  PrimitiveFactory.dot  TwoUnitsFactory.dot
